# TrafficEZ

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.cmake  README.md  TODO.md  install.sh
.github/workflows/: build-deploy.yaml  build-test-deploy.yaml  clang-format-check.yaml  dispatch-progress-event.yaml  dispatch-progress-event.yml  lint-checks.yaml
debug/: calib.sh  debug.sh  run_all.sh  run_clean_debug.sh
include/: .gitignore
include/utils/: logging.hpp  time.hpp
resources/: .gitignore
sample_configs/: junction_config.yaml  pedestrian.yaml  run_log.sh
scripts/: add_apt_keys.sh  calib_debug.sh  clean_build.sh  clean_resources.sh  copy_test_files.sh  debug_log.sh  elevate_scipts.sh  install_dependencies.sh  install_opencv.sh  run_all.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/FPSHelper/: CMakeLists.txt  FPSHelper.cpp
src/HttpRequests/: CMakeLists.txt  HttpPostClient.cpp  HttpPostClient.h  HttpPostClientAsync.cpp  HttpPostClientAsync.h
src/HullRecognitionModule/: CMakeLists.txt
src/HullRecognitionModule/HullDetector/: CMakeLists.txt  HullDetector.cpp  HullDetector.h
src/HullRecognitionModule/HullTracker/: CMakeLists.txt  HullTrackable.cpp  HullTrackable.h  HullTracker.cpp  HullTracker.h
src/HullRecognitionModule/PreprocessPipeline/: CMakeLists.txt  PipelineBuilder.cpp  PipelineBuilder.h  PipelineDirector.cpp  PipelineDirector.h  PipelineTrackbar.cpp  PipelineTrackbar.h
src/HullRecognitionModule/PreprocessPipeline/PreprocessSteps/: CMakeLists.txt  IPreprocessStep.h  PreprocessStep.h  StepFactory.cpp  StepFactory.h  StepParameters.h  StepType.h
src/HullRecognitionModule/PreprocessPipeline/PreprocessSteps/DilationStep/: CMakeLists.txt  DilationStep.cpp  DilationStep.h
src/HullRecognitionModule/PreprocessPipeline/PreprocessSteps/ErosionStep/: CMakeLists.txt  ErosionStep.cpp  ErosionStep.h
src/HullRecognitionModule/PreprocessPipeline/PreprocessSteps/GaussianBlurStep/: CMakeLists.txt  GaussianBlurStep.cpp  GaussianBlurStep.h
src/HullRecognitionModule/PreprocessPipeline/PreprocessSteps/GrayscaleStep/: CMakeLists.txt  GrayscaleStep.cpp  GrayscaleStep.h
src/HullRecognitionModule/PreprocessPipeline/PreprocessSteps/MOG2BackgroundSubtractionStep/: CMakeLists.txt  MOG2BackgroundSubtractionStep.cpp  MOG2BackgroundSubtractionStep.h
src/HullRecognitionModule/PreprocessPipeline/PreprocessSteps/ThresholdStep/: CMakeLists.txt  ThresholdStep.cpp  ThresholdStep.h
src/HullRecognitionModule/PreprocessPipelineBuilder/: CMakeLists.txt  PreprocessPipelineBuilder.cpp  PreprocessPipelineBuilder.h
src/HullRecognitionModule/PreprocessPipelineBuilder/ConcretePreprocessSteps/: CMakeLists.txt  DilationStep.cpp  DilationStep.h  ErosionStep.cpp  ErosionStep.h  GaussianBlurStep.cpp  GaussianBlurStep.h  GrayscaleStep.cpp  GrayscaleStep.h  MOG2BackgroundSubtractionStep.cpp  MOG2BackgroundSubtractionStep.h  PreprocessStep.h  ThresholdStep.cpp  ThresholdStep.h
src/InstanceSegmentationModule/: IDetectionStrategy.h  PersonDetectionStrategy.cpp  PersonDetectionStrategy.h  SegmentationMask.cpp  SegmentationMask.h  VehicleDetectionStrategy.cpp
src/IotHubClient/: CMakeLists.txt  IotHubClient.cpp  IotHubClient.h
src/MultiprocessTraffic/: CMakeLists.txt  ChildProcess.cpp  ChildProcess.h  MultiprocessTraffic.cpp  MultiprocessTraffic.h  ParentProcess.cpp  ParentProcess.h  PhaseMessageType.cpp  PhaseMessageType.h  Pipe.h
src/RelayController/: CMakeLists.txt  HttpRelayController.cpp  HttpRelayController.h  RelayController.cpp  RelayController.h  TelnetRelayController.cpp  TelnetRelayController.h
src/Reports/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  Reports.cpp  Reports.h
src/SegmentationModule/: CMakeLists.txt  ISegmentationStrategy.h  PersonSegmentationStrategy.cpp  PersonSegmentationStrategy.h  SegmentationMask.cpp  SegmentationMask.h  VehicleSegmentationStrategy.cpp  VehicleSegmentationStrategy.h
src/TrafficManager/: CMakeLists.txt  TrafficManager.cpp  TrafficManager.h
src/TrafficVideoStreamer/: CMakeLists.txt  TrafficVideoStreamer.cpp  TrafficVideoStreamer.h
src/VideoStreamer/: CMakeLists.txt  CalibrateVideoStreamer.cpp  CalibrateVideoStreamer.h  TransformPerspective.cpp  TransformPerspective.h  TrimPerspective.cpp  TrimPerspective.h  VideoStreamer.cpp  VideoStreamer.h  WarpPerspective.cpp  WarpPerspective.h
src/VideoStreamer/TransformPerspective/: CMakeLists.txt  TransformPerspective.cpp  TransformPerspective.h  TrimPerspective.cpp  TrimPerspective.h  WarpPerspective.cpp  WarpPerspective.h
src/WatcherSpawner/: CMakeLists.txt  WatcherSpawner.cpp  WatcherSpawner.h
src/WatcherSpawner/WatcherFactory/: CMakeLists.txt  WatcherFactory.cpp  WatcherFactory.h
src/WatcherSpawner/WatcherFactory/CalibrateWatcher/: CMakeLists.txt  CalibrateGui.cpp  CalibrateGui.h  CalibrateHeadless.cpp  CalibrateHeadless.h  CalibrateWatcher.cpp  CalibrateWatcher.h
src/WatcherSpawner/WatcherFactory/PedestrianWatcher/: CMakeLists.txt  PedestrianGui.cpp  PedestrianGui.h  PedestrianHeadless.cpp  PedestrianHeadless.h  PedestrianWatcher.cpp  PedestrianWatcher.h
src/WatcherSpawner/WatcherFactory/VehicleWatcher/: CMakeLists.txt  VehicleGui.cpp  VehicleGui.h  VehicleHeadless.cpp  VehicleHeadless.h  VehicleWatcher.cpp  VehicleWatcher.h
src/WatcherSpawner/WatcherFactory/include/: Gui.h  Headless.h  TrafficState.h  Watcher.h
template/: Doxyfile.in  version_config.h.in
test/lint/: scan_header_members.py
test/test_watcher_binaries/: testVehicle.yaml
util/FPSHelper/: CMakeLists.txt  FPSHelper.h
util/OrtApiWrapper/: AutoBackendOnnx.cpp  AutoBackendOnnx.h  CMakeLists.txt  OnnxModelBase.cpp  OnnxModelBase.h  YoloUtils.cpp  YoloUtils.h
util/onnxruntime/: CMakeLists.txt
util/yaml-cpp/: CMakeLists.txt
