add_subdirectory(TransformPerspective)

add_library(VideoStreamer VideoStreamer.cpp)
setup_currdir_opencv(VideoStreamer)
setup_yaml_libstatic(VideoStreamer)
target_link_libraries(VideoStreamer PRIVATE TransformPerspective)

add_library(CalibrateVideoStreamer CalibrateVideoStreamer.cpp)
setup_currdir_opencv(CalibrateVideoStreamer)
setup_yaml_libstatic(CalibrateVideoStreamer)
target_link_libraries(CalibrateVideoStreamer PRIVATE TransformPerspective)
