add_subdirectory(ConcretePreprocessSteps)

add_library(PreprocessPipelineBuilder PreprocessPipelineBuilder.cpp)
setup_currdir_opencv(PreprocessPipelineBuilder)

target_include_directories(
  PreprocessPipelineBuilder
  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ConcretePreprocessSteps)

target_link_libraries(PreprocessPipelineBuilder PRIVATE ConcretePreprocessSteps)
